--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="credit-info">
       <h2>Informations sur le crédit</h2>
       <div class="info-grid">
-        <div><strong>Total du crédit :</strong> 397,00 € €</div>
+        <div><strong>Total du crédit :</strong> 397,00 €</div>
         <div><strong>Reste à payer :</strong> 297,00 €</div>
         <div><strong>Montant déjà payer :</strong> 100,00 €</div>
       </div>
