--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <div class="container">
     <section class="credit-info">
-      <h2>Informations sur le crédit</h2>
+      <h2>Informations sur le crédit - Crédit DSA TITAN</h2>
       <div class="info-grid">
         <div><strong>Total du crédit :</strong> 397,00 €</div>
         <div><strong>Reste à payer :</strong> 297,00 €</div>
