--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </tr>
           <tr>
             <td>13/05/2025</td>
-            <td><span class="badge next">Bientôt</span></td>
+            <td><span class="badge next">Bientôt - Dans 4 Jours</span></td>
             <td>297,00 €</td>
           </tr>
         </tbody>
