--- a/index.html
+++ b/index.html
@@ -84,9 +84,14 @@
             <td>100,00 €</td>
           </tr>
           <tr>
-            <td>13/05/2025</td>
-            <td><span class="badge next">Bientôt - Dans 4 Jours</span></td>
-            <td>297,00 €</td>
+            <td>11/05/2025</td>
+            <td><span class="badge paye">Payé</span></td>
+            <td>100,00 €</td>
+          </tr>
+          <tr>
+            <td>XX/05/2025</td>
+            <td><span class="badge next">Bientôt</span></td>
+            <td>197,00 €</td>
           </tr>
         </tbody>
       </table>
