--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </tr>
           <tr>
             <td>XX/05/2025</td>
-            <td><span class="badge next">Bientôt</span></td>
+            <td><span class="badge next">Bientôt - Ajout Bénéficiaire en cours</span></td>
             <td>197,00 €</td>
           </tr>
         </tbody>
