--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <td>100,00 €</td>
           </tr>
           <tr>
-            <td>XX/05/2025</td>
-            <td><span class="badge next">Bientôt - Ajout Bénéficiaire en cours</span></td>
+            <td>X13/05/2025</td>
+            <td><span class="badge paye">Payé - Attente de confirmation</span></td>
             <td>197,00 €</td>
           </tr>
         </tbody>
