--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Suivi de Remboursement - Crédit DSA TITAN</title>
+  <title>Merci Soeurette !</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -90,7 +90,7 @@
           </tr>
           <tr>
             <td>X13/05/2025</td>
-            <td><span class="badge paye">Payé - Attente de confirmation</span></td>
+            <td><span class="badge paye">Payé</span></td>
             <td>197,00 €</td>
           </tr>
         </tbody>
